--- a/package.json
+++ b/package.json
@@ -1,59 +1,76 @@
 {
-  "name": "jmw-ng",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/cdk": "~8.1.2",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.2.0",
-    "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/pwa": "^0.802.0",
-    "@angular/router": "~8.2.0",
-    "@angular/service-worker": "~8.2.0",
-    "firebase": "6.3.4",
-    "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.0",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@types/node": "~10",
-    "@types/jasmine": "~3.3.16",
-    "@types/jasminewd2": "~2.0.6",
-    "codelyzer": "^5.1.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.6",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.18.0",
-    "typescript": "~3.5.3",
-    "@angular-devkit/architect": "^0.802.0",
-    "firebase-tools": "^7.2.2",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.5.0",
-    "inquirer-autocomplete-prompt": "^1.0.1"
-  }
+	"name": "jmw-ng",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
+		"start": "ng serve",
+		"build": "ng build",
+		"test": "ng test",
+		"lint": "ng lint",
+		"e2e": "ng e2e"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~8.2.0",
+		"@angular/cdk": "~8.1.2",
+		"@angular/common": "~8.2.0",
+		"@angular/compiler": "~8.2.0",
+		"@angular/core": "~8.2.0",
+		"@angular/fire": "^5.2.1",
+		"@angular/forms": "~8.2.0",
+		"@angular/material": "^8.1.2",
+		"@angular/platform-browser": "~8.2.0",
+		"@angular/platform-browser-dynamic": "~8.2.0",
+		"@angular/pwa": "^0.802.0",
+		"@angular/router": "~8.2.0",
+		"@angular/service-worker": "~8.2.0",
+		"@schuchard/prettier": "^3.1.0",
+		"firebase": "6.3.4",
+		"hammerjs": "^2.0.8",
+		"rxjs": "~6.4.0",
+		"tslib": "^1.10.0",
+		"zone.js": "~0.9.1"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~0.802.0",
+		"@angular/cli": "~8.2.0",
+		"@angular/compiler-cli": "~8.2.0",
+		"@angular/language-service": "~8.2.0",
+		"@types/node": "~10",
+		"@types/jasmine": "~3.3.16",
+		"@types/jasminewd2": "~2.0.6",
+		"codelyzer": "^5.1.0",
+		"husky": "3.0.2",
+		"jasmine-core": "~3.4.0",
+		"jasmine-spec-reporter": "~4.2.1",
+		"karma": "~4.1.0",
+		"karma-chrome-launcher": "~2.2.0",
+		"karma-coverage-istanbul-reporter": "~2.0.6",
+		"karma-jasmine": "~2.0.1",
+		"karma-jasmine-html-reporter": "^1.4.2",
+		"lint-staged": "9.2.1",
+		"prettier": "1.18.2",
+		"protractor": "~5.4.2",
+		"ts-node": "~7.0.1",
+		"tslint": "~5.18.0",
+		"tslint-config-prettier": "1.18.0",
+		"typescript": "~3.5.3",
+		"@angular-devkit/architect": "^0.802.0",
+		"firebase-tools": "^7.2.2",
+		"fuzzy": "^0.1.3",
+		"inquirer": "^6.5.0",
+		"inquirer-autocomplete-prompt": "^1.0.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,json,css,scss,less,md,ts,html,component.html}": [
+			"prettier --write",
+			"git add"
+		]
+	}
 }
