add sate manager NGXS

--- a/angular.json
+++ b/angular.json
@@ -116,5 +116,8 @@
 			}
 		}
 	},
-	"defaultProject": "jmw-ng"
+	"defaultProject": "jmw-ng",
+	"cli": {
+		"defaultCollection": "@ngxs/schematics"
+	}
 }
