--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 		"@angular/pwa": "^0.802.0",
 		"@angular/router": "~8.2.0",
 		"@angular/service-worker": "~8.2.0",
+		"@ngxs/devtools-plugin": "^3.5.0",
+		"@ngxs/logger-plugin": "^3.5.0",
+		"@ngxs/store": "^3.5.0",
 		"@schuchard/prettier": "^3.1.0",
 		"firebase": "6.3.4",
 		"hammerjs": "^2.0.8",
@@ -37,6 +40,7 @@
 		"@angular/cli": "~8.2.0",
 		"@angular/compiler-cli": "~8.2.0",
 		"@angular/language-service": "~8.2.0",
+		"@ngxs/schematics": "^0.0.1-alpha.5",
 		"@types/node": "~10",
 		"@types/jasmine": "~3.3.16",
 		"@types/jasminewd2": "~2.0.6",
