--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,14 @@
 							],
 							"serviceWorker": true,
 							"ngswConfigPath": "ngsw-config.json"
+						},
+						"augury": {
+							"fileReplacements": [
+								{
+									"replace": "src/main.ts",
+									"with": "src/main.augury.ts"
+								}
+							]
 						}
 					}
 				},
@@ -69,6 +77,9 @@
 					"configurations": {
 						"production": {
 							"browserTarget": "jmw-ng:build:production"
+						},
+						"augury": {
+							"browserTarget": "jmw-ng:build:augury"
 						}
 					}
 				},
