--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"ng": "ng",
 		"prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
+		"start:augury": "ng serve --configuration augury",
 		"start": "ng serve",
 		"build": "ng build",
 		"test": "ng test",
@@ -25,6 +26,7 @@
 		"@angular/pwa": "^0.802.1",
 		"@angular/router": "~8.2.1",
 		"@angular/service-worker": "~8.2.1",
+		"@augury/schematics": "^0.6.1",
 		"@ngxs/devtools-plugin": "^3.5.0",
 		"@ngxs/logger-plugin": "^3.5.0",
 		"@ngxs/store": "^3.5.0",
@@ -36,16 +38,23 @@
 		"zone.js": "~0.9.1"
 	},
 	"devDependencies": {
+		"@angular-devkit/architect": "^0.802.1",
 		"@angular-devkit/build-angular": "~0.802.1",
 		"@angular/cli": "~8.2.1",
 		"@angular/compiler-cli": "~8.2.1",
 		"@angular/language-service": "~8.2.1",
+		"@augury/core": "0.6.0",
+		"@augury/performance-profiler-plugin": "0.6.1",
 		"@ngxs/schematics": "^0.0.1-alpha.5",
-		"@types/node": "~10",
 		"@types/jasmine": "~3.3.16",
 		"@types/jasminewd2": "~2.0.6",
+		"@types/node": "~10",
 		"codelyzer": "^5.1.0",
+		"firebase-tools": "^7.2.2",
+		"fuzzy": "^0.1.3",
 		"husky": "3.0.3",
+		"inquirer": "^6.5.1",
+		"inquirer-autocomplete-prompt": "^1.0.1",
 		"jasmine-core": "~3.4.0",
 		"jasmine-spec-reporter": "~4.2.1",
 		"karma": "~4.1.0",
@@ -59,12 +68,7 @@
 		"ts-node": "~7.0.1",
 		"tslint": "~5.18.0",
 		"tslint-config-prettier": "1.18.0",
-		"typescript": "~3.5.3",
-		"@angular-devkit/architect": "^0.802.1",
-		"firebase-tools": "^7.2.2",
-		"fuzzy": "^0.1.3",
-		"inquirer": "^6.5.1",
-		"inquirer-autocomplete-prompt": "^1.0.1"
+		"typescript": "~3.5.3"
 	},
 	"husky": {
 		"hooks": {
