--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
-		"prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
-		"start:augury": "ng serve --configuration augury",
 		"start": "ng serve",
 		"build": "ng build",
 		"test": "ng test",
 		"lint": "ng lint",
-		"e2e": "ng e2e"
+		"e2e": "ng e2e",
+		"prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
+		"start:augury": "ng serve --configuration augury",
+		"compile:server": "webpack --config webpack.server.config.js --progress --colors",
+		"serve:ssr": "node dist/server",
+		"build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+		"build:client-and-server-bundles": "ng build --prod && ng run jmw-ng:server:production --bundleDependencies all"
 	},
 	"private": true,
 	"dependencies": {
@@ -23,14 +27,18 @@
 		"@angular/material": "^8.1.2",
 		"@angular/platform-browser": "~8.2.1",
 		"@angular/platform-browser-dynamic": "~8.2.1",
+		"@angular/platform-server": "~8.2.1",
 		"@angular/pwa": "^0.802.1",
 		"@angular/router": "~8.2.1",
 		"@angular/service-worker": "~8.2.1",
 		"@augury/schematics": "^0.6.1",
+		"@nguniversal/express-engine": "^8.1.1",
+		"@nguniversal/module-map-ngfactory-loader": "8.1.1",
 		"@ngxs/devtools-plugin": "^3.5.0",
 		"@ngxs/logger-plugin": "^3.5.0",
 		"@ngxs/store": "^3.5.0",
 		"@schuchard/prettier": "^3.1.0",
+		"express": "^4.17.1",
 		"firebase": "6.3.5",
 		"hammerjs": "^2.0.8",
 		"rxjs": "~6.5.2",
@@ -65,10 +73,12 @@
 		"lint-staged": "9.2.1",
 		"prettier": "1.18.2",
 		"protractor": "~5.4.2",
+		"ts-loader": "^5.4.5",
 		"ts-node": "~7.0.1",
 		"tslint": "~5.18.0",
 		"tslint-config-prettier": "1.18.0",
-		"typescript": "~3.5.3"
+		"typescript": "~3.5.3",
+		"webpack-cli": "^3.3.6"
 	},
 	"husky": {
 		"hooks": {
