slight refactor and tweaks, begin HMR implementation

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -7,5 +7,6 @@
 	"files": ["src/main.server.ts"],
 	"angularCompilerOptions": {
 		"entryModule": "./src/app/app.server.module#AppServerModule"
-	}
+	},
+	"exclude": ["**/*.spec.ts", "e2e/**", "src/app/app.browser.module.ts", "src/main.ts", "src/stories/**"]
 }
