--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~8.2.1",
+		"@angular/animations": "~8.2.2",
 		"@angular/cdk": "~8.1.2",
-		"@angular/common": "~8.2.1",
-		"@angular/compiler": "~8.2.1",
-		"@angular/core": "~8.2.1",
+		"@angular/common": "~8.2.2",
+		"@angular/compiler": "~8.2.2",
+		"@angular/core": "~8.2.2",
 		"@angular/fire": "^5.2.1",
-		"@angular/forms": "~8.2.1",
+		"@angular/forms": "~8.2.2",
 		"@angular/material": "^8.1.2",
-		"@angular/platform-browser": "~8.2.1",
-		"@angular/platform-browser-dynamic": "~8.2.1",
-		"@angular/platform-server": "~8.2.1",
+		"@angular/platform-browser": "~8.2.2",
+		"@angular/platform-browser-dynamic": "~8.2.2",
+		"@angular/platform-server": "~8.2.2",
 		"@angular/pwa": "^0.802.1",
-		"@angular/router": "~8.2.1",
-		"@angular/service-worker": "~8.2.1",
+		"@angular/router": "~8.2.2",
+		"@angular/service-worker": "~8.2.2",
+		"@angularclass/hmr": "^2.1.3",
 		"@augury/schematics": "^0.6.1",
 		"@nguniversal/express-engine": "^8.1.1",
 		"@nguniversal/module-map-ngfactory-loader": "8.1.1",
@@ -43,17 +44,18 @@
 		"hammerjs": "^2.0.8",
 		"rxjs": "~6.5.2",
 		"tslib": "^1.10.0",
-		"zone.js": "~0.9.1"
+		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
 		"@angular-devkit/architect": "^0.802.1",
 		"@angular-devkit/build-angular": "~0.802.1",
 		"@angular/cli": "~8.2.1",
-		"@angular/compiler-cli": "~8.2.1",
-		"@angular/language-service": "~8.2.1",
+		"@angular/compiler-cli": "~8.2.2",
+		"@angular/language-service": "~8.2.2",
 		"@augury/core": "0.6.0",
 		"@augury/performance-profiler-plugin": "0.6.1",
 		"@ngxs/schematics": "^0.0.1-alpha.5",
+		"@types/express": "^4.17.0",
 		"@types/jasmine": "~3.3.16",
 		"@types/jasminewd2": "~2.0.6",
 		"@types/node": "~10",
@@ -73,11 +75,12 @@
 		"lint-staged": "9.2.1",
 		"prettier": "1.18.2",
 		"protractor": "~5.4.2",
-		"ts-loader": "^5.4.5",
-		"ts-node": "~7.0.1",
+		"ts-loader": "^6.0.4",
+		"ts-node": "~8.3.0",
 		"tslint": "~5.18.0",
 		"tslint-config-prettier": "1.18.0",
 		"typescript": "~3.5.3",
+		"udk": "^1.1.7",
 		"webpack-cli": "^3.3.6"
 	},
 	"husky": {
