fix prettier write issue

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
 		}
 	},
 	"lint-staged": {
-		"*.{js,json,css,scss,less,md,ts,html,component.html}": [
+		"\"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"": [
 			"prettier --write",
 			"git add"
 		]
